# rust-audio-codecs

./: .gitmodules  Cargo.toml  README.md
fdk-aac-sys/: Cargo.toml  build.rs
flac-sys/: Cargo.toml  build.rs
opus-sys/: Cargo.toml  build.rs
